@@ -1,3 +1,8 @@
+2004-11-05  Hiroyuki Ito <ZXB01226@nifty.com>
+
+	* [w3m-dev 04117] Re: start attribute and value attribute on ordered lists
+	* file.c (HTMLtagproc1): allow negative value for start attr
+
 2004-10-14  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* Bug#276246: w3m's locale parsing should at least see '@euro' modifier
